--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ apps/.service/1562186b6a50f56664060cda865cd1bd_py4web_error.table
 apps/birdwatching/databases/storage.db
 apps/birdwatching/databases/storage.db
 apps/birdwatching/databases/storage.db
+apps/birdwatching/databases/storage.db
